Mon Nov 16 16:50:27 1998  Nick Clifton  <nickc@cygnus.com>

	* gas/fr30/allinsn.s: Fix syntax errors.

Mon Nov 16 19:27:52 1998  Dave Brolley  <brolley@cygnus.com>

	* gas/fr30/allinsn.s: Fixed more typos.

Fri Nov 13 13:15:01 1998  Nick Clifton  <nickc@cygnus.com>

	* gas/fr30/allinsn.s: Fixed typos and added some tests of upper
	case vs lower case.

Tue Nov 10 14:54:47 1998  Nick Clifton  <nickc@cygnus.com>

	* gas/fr30/allinsn.s: New file.
	* gas/fr30/allinsn.d: New file.
	* gas/fr30/allinsn.exp: New file.
	* gas/fr30/fr30.exp: New file.

Mon Nov  2 20:16:50 1998  Doug Evans  <devans@canuck.cygnus.com>

	* gas/m32r/fslot.[sd]: New testcase.
	* gas/m32r/m32r.exp: Run it.
start-sanitize-m32rx
	* gas/m32r/fslotx.[sd]: New testcase.
	* gas/m32r/m32rx.exp: Run it.
	* gas/m32r/m32rx.[sd]: Update.

	* gas/m32r/error.exp: New error testcase driver.
	* gas/m32r/wrongsize.s: New testcase.
end-sanitize-m32rx

start-sanitize-r5900
Fri Oct 23 13:01:24 EDT 1998 Frank Ch. Eigler <fche@cygnus.com>

	* gas/mips/vu0.[sd]: Update tests for VRNEXT and VRGET
	instructions, to match corrected operand synatx.

end-sanitize-r5900
Tue Oct 20 11:35:06 1998  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* gas/i386/i386.exp: Run AMD insn test.
	* gas/i386/amd.s: New test.
	* gas/i386/amd.d: New test results.

Sun Sep 20 01:00:01 1998  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>

	* gas/vtable/inherit1.l: Require only the word GAS somewere in the
	first line of the listing.

Tue Sep  1 10:20:03 1998  Richard Henderson  <rth@cygnus.com>

	* gas/ppc/astest.d: Adjust regexps to match a 64-bit host.
	* gas/ppc/astest2.d: Likewise.

Mon Aug 31 13:25:07 1998  Richard Henderson  <rth@cygnus.com>

	* gas/vtable/{entry0.d,entry1.d,inherit0.d}: Fix pattern matching
	of whitespace for 64-bit hosts.

Mon Aug 31 12:45:49 1998  Richard Henderson  <rth@cygnus.com>

	* gas/vtable/vtable.exp: New.
	* gas/vtable/{entry0.s,entry0.d}: New.
	* gas/vtable/{entry1.s,entry1.d}: New.